--- a/css/en/main.scss
+++ b/css/en/main.scss
@@ -13,6 +13,7 @@ body {
   font-size: 1.6rem;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 
   .fsymbol {
     font-size: 40rem;
@@ -136,6 +137,68 @@ body {
         cursor: pointer;
       }
     }
+  }
+
+  section.collection-home {
+    background-image: url("../../img/exhibition.jpg");
+    background-position: center 0;
+    background-color: #d8d9d4;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 170vh;
+    position: relative;
+
+    .navbar {
+      .nav {
+        ul {
+          color: #606357;
+        }
+      }
+    }
+
+    .shadow-text {
+      position: absolute;
+      bottom: 50px;
+      right: 0;
+      left: 0;
+      font-size: 16vh;
+      user-select: none;
+      font-family: "Lao UI", serif;
+      display: flex;
+      justify-content: center;
+
+      .wrapper {
+        text-align: center;
+
+        h1 {
+          margin-block-start: 0;
+          margin-block-end: 0;
+          width: 50%;
+          position: relative;
+          transition: 0.4s ease;
+        }
+
+        .text {
+          color: white;
+          z-index: 2;
+        }
+
+        .shadow {
+          transform: matrix3d(1, 0, 0, 0, -0.7, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+          z-index: 1;
+          opacity: 0.3;
+          margin: -1.2em 0 0 0.28em;
+          filter: blur(8px);
+        }
+
+      }
+
+    }
+
+    .shadow-text :hover .text {
+      color: #dfefff;
+    }
+
   }
 
   .header {
@@ -1285,6 +1348,115 @@ body {
     }
   }
 
+  .gooddesign-slide {
+    display: flex;
+    position: relative;
+    background-image: url("../../img/waves.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    flex-direction: column;
+    padding: 40px 0;
+    border-top: 15px white solid;
+
+    * {
+      margin-block-start: 0;
+      margin-block-end: 0;
+    }
+
+    .description {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+
+      .text-wrapper {
+        width: 48%;
+        padding: 80px 0;
+
+        h1 {
+          padding: 10px 50px;
+          font-size: 3rem;
+          font-family: "Lato Hairline", serif;
+        }
+
+        h6 {
+          padding: 20px 60px;
+          line-height: 2;
+        }
+
+        .readmore {
+          display: flex;
+          align-items: center;
+          padding: 20px 50px;
+          color: $darkest;
+          cursor: pointer;
+
+          img {
+            padding: 20px;
+            background-color: #3e3e46;
+            width: 20px;
+            border-radius: 50px;
+          }
+
+          h4 {
+            align-items: center;
+            padding: 0 20px;
+          }
+        }
+      }
+    }
+
+    .image-object {
+      position: absolute;
+      left: 48%;
+      top: 20px;
+      width: 330px;
+      padding: 20px;
+      transition: 0.3s ease;
+      filter: drop-shadow(-15px 0 16px #444444aa);
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
+
+      &:hover {
+        width: 340px;
+        filter: drop-shadow(-20px 0 20px #444444aa);
+      }
+    }
+
+    .titles {
+      display: flex;
+      width: 100%;
+      justify-content: center;
+
+      ul {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+      }
+
+      li {
+        list-style: none;
+        padding: 15px;
+        //transition: 0.8s ease-in;
+
+
+        a {
+          color: black;
+          text-decoration: none;
+          padding: 5px;
+
+          &:hover {
+            border-bottom: 1px solid $darker;
+            font-weight: bold;
+          }
+        }
+      }
+    }
+  }
+
   .collection {
     display: flex;
     background-image: url("../../img/plate.png");
@@ -1471,6 +1643,216 @@ body {
       }
     }
 
+  }
+
+  .word-slider {
+    display: flex;
+    padding: 60px 20px;
+    background-color: #ffffff94;
+    background-image: url("../../img/texture5.png");
+    background-size: cover;
+    background-blend-mode: color;
+    flex-direction: column;
+    justify-content: center;
+
+    h1, h4 {
+      text-align: center;
+      font-family: "Lato Hairline", serif;
+    }
+
+  }
+
+  .tiles-wrapper {
+    box-sizing: border-box;
+    border: 10px solid white;
+    display: flex;
+    flex: 1 1 0;
+    flex-direction: column;
+
+    .tile {
+      display: flex;
+      flex: 1 1 0;
+      background-color: #cefffc;
+      justify-content: center;
+      min-height: 601px;
+
+
+      .xxx {
+        display: flex;
+        flex: 1 1 0;
+        justify-content: center;
+        flex-direction: column;
+        position: relative;
+      }
+
+      .xx, .x {
+        position: relative;
+        display: flex;
+        flex: 1 1 0;
+        min-height: 300px;
+      }
+
+      .hover {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(255, 255, 239, 0.36);
+        border: 5px solid white;
+        box-sizing: border-box;
+        transition: 0.5s ease;
+        opacity: 0;
+
+        h3 {
+          font-size: 2rem;
+          color: black;
+        }
+
+        .button {
+          background-color: #0fbbbf;
+          border-radius: 50px;
+          display: flex;
+          justify-content: space-between;
+
+          div {
+            width: 35px;
+            height: 35px;
+            background-color: darkorange;
+            border-radius: 50px;
+            margin: 15px;
+          }
+        }
+      }
+
+    }
+
+    .top {
+      flex-direction: row;
+    }
+
+    .bottom {
+      flex-direction: row-reverse;
+    }
+
+    img {
+      width: 100%;
+      border: 5px solid white;
+      height: 100%;
+      overflow: hidden;
+      object-fit: cover;
+      box-sizing: border-box;
+      min-height: 300px;
+      transition: 0.1s ease;
+    }
+
+    .xxx:hover > img, .xx:hover > img, .x:hover > img {
+      filter: blur(5px);
+    }
+
+    .xxx:hover > .hover, .xx:hover > .hover, .x:hover > .hover {
+      opacity: 1;
+    }
+
+
+  }
+
+  .video {
+    position: relative;
+    display: flex;
+    height: 800px;
+    background-image: url("../../img/girl.jpg");
+    background-size: cover;
+
+    .play {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      backdrop-filter: blur(3px);
+      justify-content: center;
+      align-items: center;
+
+      .button {
+        background-color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50px;
+        padding: 10px 35px;
+
+        h2 {
+          padding: 5px;
+          margin: 0;
+          font-size: 1.5rem;
+        }
+
+        img {
+          margin: 0;
+          padding: 10px;
+          width: 25px;
+          height: 25px;
+        }
+      }
+    }
+  }
+
+  .gallery {
+    display: flex;
+    width: 100%;
+
+    .description {
+      display: flex;
+      flex: 4 0 0;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+
+      .play {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .button {
+          background-color: #404040;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          border-radius: 50px;
+          padding: 10px 35px;
+
+          h2 {
+            color: white;
+            padding: 5px;
+            margin: 0;
+            font-size: 1.5rem;
+          }
+
+          img {
+            margin: 0;
+            padding: 10px;
+            width: 25px;
+            height: 25px;
+          }
+        }
+      }
+    }
+
+    .image {
+      display: flex;
+      flex: 3 0 0;
+      padding: 100px 0;
+      justify-content: center;
+      align-items: center;
+
+      img {
+        width: 90%;
+        border-radius: 5px;
+        box-shadow: 0 20px 13px #00000021;
+      }
+    }
   }
 
 }
@@ -2230,6 +2612,7 @@ body {
 
         .site-map .wrapper {
           min-width: auto;
+
           .right, .left {
             ul li {
               font-size: 0rem;
