--- a/css/fa/main.css
+++ b/css/fa/main.css
@@ -125,6 +125,53 @@ h1, h2, h3, h4, h5, h6, span, a, li {
   bottom: 10px;
   cursor: pointer;
 }
+.container section.collection-home {
+  background-image: url("../../img/exhibition.jpg");
+  background-position: center 0;
+  background-color: #d8d9d4;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 170vh;
+  position: relative;
+}
+.container section.collection-home .navbar .nav ul {
+  color: #606357;
+}
+.container section.collection-home .shadow-text {
+  position: absolute;
+  bottom: 50px;
+  right: 0;
+  left: 0;
+  font-size: 16vh;
+  user-select: none;
+  font-family: "Lao UI", serif;
+  display: flex;
+  justify-content: center;
+}
+.container section.collection-home .shadow-text .wrapper {
+  text-align: center;
+}
+.container section.collection-home .shadow-text .wrapper h1 {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  width: 50%;
+  position: relative;
+  transition: 0.4s ease;
+}
+.container section.collection-home .shadow-text .wrapper .text {
+  color: white;
+  z-index: 2;
+}
+.container section.collection-home .shadow-text .wrapper .shadow {
+  transform: matrix3d(1, 0, 0, 0, -0.7, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+  z-index: 1;
+  opacity: 0.3;
+  margin: -1.2em 0 0 0.28em;
+  filter: blur(8px);
+}
+.container section.collection-home .shadow-text :hover .text {
+  color: #dfefff;
+}
 .container .header {
   z-index: 6;
   position: relative;
@@ -940,6 +987,7 @@ h1, h2, h3, h4, h5, h6, span, a, li {
   transform: scaleX(1);
 }
 .container .footer .details .newsletter button {
+  font-family: IRANSansWeb, "Lato", serif;
   background-color: white;
   border-radius: 30px;
   border-style: none;
@@ -987,7 +1035,7 @@ h1, h2, h3, h4, h5, h6, span, a, li {
   color: #cccccc;
   width: 100%;
   overflow: hidden;
-  font-family: "Lato Hairline";
+  font-family: IRANSansWeb, "Lato", serif;
 }
 .container .footer .copyright h6 b {
   color: white !important;
@@ -1042,7 +1090,6 @@ h1, h2, h3, h4, h5, h6, span, a, li {
   padding: 20px 50px;
   color: #454545;
   cursor: pointer;
-  flex-direction: row-reverse;
 }
 .container .gooddesign .description .text-wrapper .readmore img {
   padding: 20px;
@@ -1075,6 +1122,96 @@ h1, h2, h3, h4, h5, h6, span, a, li {
   padding: 5px;
 }
 .container .gooddesign .titles li a:hover {
+  border-bottom: 1px solid #777777;
+  font-weight: bold;
+}
+.container .gooddesign-slide {
+  display: flex;
+  position: relative;
+  background-image: url("../../img/waves.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  flex-direction: column;
+  padding: 40px 0;
+  border-top: 15px white solid;
+}
+.container .gooddesign-slide * {
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+.container .gooddesign-slide .description {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+.container .gooddesign-slide .description .text-wrapper {
+  width: 48%;
+  padding: 80px 0;
+}
+.container .gooddesign-slide .description .text-wrapper h1 {
+  padding: 10px 50px;
+  font-size: 3rem;
+  font-family: IRANSansWeb, "Lato", serif;
+}
+.container .gooddesign-slide .description .text-wrapper h6 {
+  padding: 20px 60px;
+  line-height: 2;
+}
+.container .gooddesign-slide .description .text-wrapper .readmore {
+  display: flex;
+  align-items: center;
+  padding: 20px 50px;
+  color: #454545;
+  cursor: pointer;
+}
+.container .gooddesign-slide .description .text-wrapper .readmore img {
+  padding: 20px;
+  background-color: #3e3e46;
+  width: 20px;
+  border-radius: 50px;
+}
+.container .gooddesign-slide .description .text-wrapper .readmore h4 {
+  align-items: center;
+  padding: 0 20px;
+}
+.container .gooddesign-slide .image-object {
+  position: absolute;
+  right: 48%;
+  top: 20px;
+  width: 330px;
+  padding: 20px;
+  transition: 0.3s ease;
+  filter: drop-shadow(-15px 0 16px #444444aa);
+}
+.container .gooddesign-slide .image-object img {
+  width: 100%;
+  height: 100%;
+}
+.container .gooddesign-slide .image-object:hover {
+  width: 340px;
+  filter: drop-shadow(-20px 0 20px #444444aa);
+}
+.container .gooddesign-slide .titles {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+.container .gooddesign-slide .titles ul {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.container .gooddesign-slide .titles li {
+  list-style: none;
+  padding: 15px;
+}
+.container .gooddesign-slide .titles li a {
+  color: black;
+  text-decoration: none;
+  padding: 5px;
+}
+.container .gooddesign-slide .titles li a:hover {
   border-bottom: 1px solid #777777;
   font-weight: bold;
 }
@@ -1234,6 +1371,183 @@ h1, h2, h3, h4, h5, h6, span, a, li {
 .container .ourcustomers .logos .item img {
   width: 100%;
   height: 100%;
+}
+.container .word-slider {
+  display: flex;
+  padding: 60px 20px;
+  background-color: #ffffff94;
+  background-image: url("../../img/texture5.png");
+  background-size: cover;
+  background-blend-mode: color;
+  flex-direction: column;
+  justify-content: center;
+}
+.container .word-slider h1, .container .word-slider h4 {
+  text-align: center;
+  font-family: IRANSansWeb, "Lato", serif;
+}
+.container .tiles-wrapper {
+  box-sizing: border-box;
+  border: 10px solid white;
+  display: flex;
+  flex: 1 1 0;
+  flex-direction: column;
+}
+.container .tiles-wrapper .tile {
+  display: flex;
+  flex: 1 1 0;
+  background-color: #cefffc;
+  justify-content: center;
+  min-height: 601px;
+}
+.container .tiles-wrapper .tile .xxx {
+  display: flex;
+  flex: 1 1 0;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+}
+.container .tiles-wrapper .tile .xx, .container .tiles-wrapper .tile .x {
+  position: relative;
+  display: flex;
+  flex: 1 1 0;
+  min-height: 300px;
+}
+.container .tiles-wrapper .tile .hover {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 239, 0.36);
+  border: 5px solid white;
+  box-sizing: border-box;
+  transition: 0.5s ease;
+  opacity: 0;
+}
+.container .tiles-wrapper .tile .hover h3 {
+  font-size: 2rem;
+  color: black;
+}
+.container .tiles-wrapper .tile .hover .button {
+  background-color: #0fbbbf;
+  border-radius: 50px;
+  display: flex;
+  justify-content: space-between;
+}
+.container .tiles-wrapper .tile .hover .button div {
+  width: 35px;
+  height: 35px;
+  background-color: darkorange;
+  border-radius: 50px;
+  margin: 15px;
+}
+.container .tiles-wrapper .top {
+  flex-direction: row;
+}
+.container .tiles-wrapper .bottom {
+  flex-direction: row-reverse;
+}
+.container .tiles-wrapper img {
+  width: 100%;
+  border: 5px solid white;
+  height: 100%;
+  overflow: hidden;
+  object-fit: cover;
+  box-sizing: border-box;
+  min-height: 300px;
+  transition: 0.1s ease;
+}
+.container .tiles-wrapper .xxx:hover > img, .container .tiles-wrapper .xx:hover > img, .container .tiles-wrapper .x:hover > img {
+  filter: blur(5px);
+}
+.container .tiles-wrapper .xxx:hover > .hover, .container .tiles-wrapper .xx:hover > .hover, .container .tiles-wrapper .x:hover > .hover {
+  opacity: 1;
+}
+.container .video {
+  position: relative;
+  display: flex;
+  height: 800px;
+  background-image: url("../../img/girl.jpg");
+  background-size: cover;
+}
+.container .video .play {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  backdrop-filter: blur(3px);
+  justify-content: center;
+  align-items: center;
+}
+.container .video .play .button {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  padding: 10px 35px;
+}
+.container .video .play .button h2 {
+  padding: 5px;
+  margin: 0;
+  font-size: 1.5rem;
+}
+.container .video .play .button img {
+  margin: 0;
+  padding: 10px;
+  width: 25px;
+  height: 25px;
+}
+.container .gallery {
+  display: flex;
+  width: 100%;
+}
+.container .gallery .description {
+  display: flex;
+  flex: 4 0 0;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.container .gallery .description .play {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container .gallery .description .play .button {
+  background-color: #404040;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  padding: 10px 35px;
+}
+.container .gallery .description .play .button h2 {
+  color: white;
+  padding: 5px;
+  margin: 0;
+  font-size: 1.5rem;
+}
+.container .gallery .description .play .button img {
+  margin: 0;
+  padding: 10px;
+  width: 25px;
+  height: 25px;
+}
+.container .gallery .image {
+  display: flex;
+  flex: 3 0 0;
+  padding: 100px 0;
+  justify-content: center;
+  align-items: center;
+}
+.container .gallery .image img {
+  width: 90%;
+  border-radius: 5px;
+  box-shadow: 0 20px 13px #00000021;
 }
 
 @media all and (max-width: 1280px) {
@@ -1460,6 +1774,9 @@ h1, h2, h3, h4, h5, h6, span, a, li {
     width: 30px;
     height: 30px;
   }
+  .container section.collection-home .shadow-text {
+    font-size: 12vh;
+  }
   .container .fsymbol {
     font-size: 15rem;
   }
@@ -1539,6 +1856,53 @@ h1, h2, h3, h4, h5, h6, span, a, li {
   }
   .container .gooddesign .description .text-wrapper .readmore h4 {
     font-size: 0.8rem;
+  }
+  .container .gooddesign-slide .image-object {
+    width: 230px;
+    filter: drop-shadow(-5px 0 6px #444444aa);
+  }
+  .container .gooddesign-slide .image-object:hover {
+    width: 240px;
+    filter: drop-shadow(-10px 0 10px #444444aa);
+  }
+  .container .gooddesign-slide .description .text-wrapper h1 {
+    padding: 5px 25px;
+    font-size: 1.5rem;
+  }
+  .container .gooddesign-slide .description .text-wrapper h6 {
+    padding: 10px 30px;
+    line-height: 1.5;
+  }
+  .container .gooddesign-slide .description .text-wrapper .readmore {
+    padding: 10px 25px;
+  }
+  .container .gooddesign-slide .description .text-wrapper .readmore h4 {
+    font-size: 1.5rem;
+    padding: 0 10px;
+  }
+  .container .gooddesign-slide .description .text-wrapper .readmore img {
+    padding: 10px;
+    width: 10px;
+  }
+  .container .gallery .description .play .button {
+    padding: 5px 17px;
+  }
+  .container .gallery .description .play .button h2 {
+    padding: 2px;
+    font-size: 1rem;
+  }
+  .container .gallery .description .play .button img {
+    padding: 8px;
+    width: 12px;
+    height: 12px;
+  }
+  .container .tiles-wrapper .tile .hover h3 {
+    font-size: 0.6rem;
+  }
+  .container .tiles-wrapper .tile .hover .button div {
+    width: 17px;
+    height: 17px;
+    margin: 7px;
   }
   .container .features {
     padding: 50px 10px;
